Fixed a conditional that should have only run on mobile, but was runnng on Desktop and permanantly messing with the annotation slide positioning

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -81,6 +81,8 @@ strong {
 	margin-bottom: var(--spacer-bottom);
 	margin-left: 10px;
 
+    position: relative;
+
 	min-height: 320px;
 	border-radius: 15px;
 
